# pyoco

./: README.md  README_ja.md  pyproject.toml  tasks.py  walkthrough_v030.md
docs/: grafana_pyoco_cute.json  index.md  observability.md  phase1_task.md  phase2_task.md  phase3_task.md  phase4_task.md  plugins.md  plugins_sample_datapipe.md  pyoco_spec.md  roadmap.md  tutorial_plan.md  v0.3.0_design.md  v0.3.0_task.md  v0.4.0_design.md  v0.4.0_tasks.md  v0.5.0_design.md  v0.5.1_design.md  v0.5.1_plan.md
docs/archive/: v0.2.0_task.md  v0.4.0_tasks.md  v0.5.0_tasks.md
docs/tutorial/: 01_hello.md  01_hello_ja.md  02_params.md  02_params_ja.md  03_data_flow.md  03_data_flow_ja.md  04_parallel.md  04_parallel_ja.md  05_artifacts.md  05_artifacts_ja.md  06_errors.md  06_errors_ja.md  07_custom_tasks.md  07_custom_tasks_ja.md  08_control.md  08_control_ja.md  index.md  index_ja.md
examples/: custom_task_draft.py  hello_pyoco.py  simple_workflow.py  spec_example.py
examples/cute_demo/: flow.yaml  tasks.py
examples/demo/: flow.yaml  main.py
src/pyoco/: __init__.py  client.py  socketless_reset.py
tests/: socketless_app.py  test_cancellation.py  test_cli_cancellation.py  test_dsl.py  test_e2e_socketless.py  test_engine.py  test_engine_state.py  test_integration_v030.py  test_socketless_basic.py  test_state_models.py
tests/cli/: test_cli.py  test_cli_plugins_lint.py
tests/core/: test_artifacts.py  test_context_resolve.py  test_context_save.py  test_engine_failure.py  test_engine_inputs.py  test_engine_parallel.py  test_loop_context.py  test_run_context.py
(+40 files in other folders)
